--- a/bootstrap-5.3.8/scss/_alert.scss
+++ b/bootstrap-5.3.8/scss/_alert.scss
@@ -16,11 +16,14 @@
   // scss-docs-end alert-css-vars
 
   position: relative;
-  padding: var(--#{$prefix}alert-padding-y) var(--#{$prefix}alert-padding-x);
-  margin-bottom: var(--#{$prefix}alert-margin-bottom);
+  padding: 7px;
+  margin-bottom: 5px;
   color: var(--#{$prefix}alert-color);
   background-color: var(--#{$prefix}alert-bg);
   border: var(--#{$prefix}alert-border);
+  font-size: 12px;
+  text-align: center;
+  display: inline-block;
   @include border-radius(var(--#{$prefix}alert-border-radius));
 }
 
